Single featured image behing title fix dark mode

--- a/themes/jeo-theme/assets/scss/5-pages/_p-single.scss
+++ b/themes/jeo-theme/assets/scss/5-pages/_p-single.scss
@@ -751,7 +751,7 @@
 
 .dark-theme {
     &.single {
-        &:not(.has-featured-image) {
+        &:not(.has-featured-image), &:not(.single-featured-image-behind) {
             .entry-title  {
                 color: white;
             }
